--- a/templates/index.html
+++ b/templates/index.html
@@ -21,18 +21,22 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
         <title>StudyGroupMe</title>
+                <style>
+            body{
+              background-image: url('/static/photo.jpg');
+              background-repeat: no-repeat;
+              background-attachment: fixed;
+              background-size: cover;
+                }
+                </style>
     </head>
-    <body id="index">
+    <body id="bodyindex">
         <div>
-            <h1 id = "id_index">StudyGroupMe</h1>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <h1 id = "index">StudyGroupMe</h1>
             <form action="/" method="post">
-                <div>
-                    <button type="submit" class="btn btn-outline-danger btn-lg">Log In</button>
+                <p id="heading1">Log in to organize study groups with your friends!</p>
+                <div id= buttona>
+                    <button type="submit" class="btn btn-light btn-lg">Log In</button>
                 </div>
             </form>
         </div>
