--- a/templates/create.html
+++ b/templates/create.html
@@ -6,24 +6,17 @@
 
 {% block main %}
 
+<div id="createbody">
+    <h2>Create a Study Group</h2>
+    <p>Fill out the form below to create a study group for one of your classes. Then, you can create events that your classmates can see so that they can join your group!</p>
 
-
-<form action="/create" method="post">
+    <form action="/create" method="post">
         <div class="form-group">
-            <input required autocomplete="off" autofocus class="form-control" name="name" placeholder="Name" type="text">
+            <input required autocomplete="off" autofocus class="form-control" name="name" placeholder="Group Name" type="text">
         </div>
 
         <div class="form-group">
             <input class="form-control" name="description" placeholder="Description" type="text">
-        </div>
-
-        <div class="form-group">
-            <label class="radio-inline"><input type="radio" name="visibility" value="public" checked>Public</label><br>
-            <label class="radio-inline"><input type="radio" name="visibility" value="private">Private</label>
-        </div>
-
-        <div class="form-group">
-            <input required type="number" class="form-control" min="2" max="12" placeholder="Max size" name="maxsize">
         </div>
 
         <div class="form-group dropdown">
@@ -35,9 +28,24 @@
         </select>
         </div>
 
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="visibility" id="inlineRadio1" value="public">
+          <label class="form-check-label" for="inlineRadio1">Public</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="visibility" id="inlineRadio1" value="private">
+          <label class="form-check-label" for="inlineRadio1">Private</label>
+        </div>
+
+        <div class="form-group">
+            <input required type="number" class="form-control" min="2" max="8" placeholder="Max # of People" name="maxsize">
+        </div>
+
         <div class="form-group">
                 <button type="submit" class="btn btn-outline-danger btn-lg">Submit</button>
         </div>
     </form>
+</div>
+
 
 {% endblock %}
