--- a/templates/create.html
+++ b/templates/create.html
@@ -20,22 +20,22 @@
         </div>
 
         <div class="form-group dropdown">
-        <select name="course" class="form-control">
-            <option selected disabled>Class</option>
+        <select required name="course" class="form-control">
+            <option selected disabled value="">Class</option>
             {% for course in courses %}
                 <option value="{{course['id']}}">{{course['subject']}} {{course['courseno']}}</option>
             {% endfor %}
         </select>
         </div>
 
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="visibility" id="inlineRadio1" value="public">
-          <label class="form-check-label" for="inlineRadio1">Public</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="visibility" id="inlineRadio1" value="private">
-          <label class="form-check-label" for="inlineRadio1">Private</label>
-        </div>
+        <!--<div class="form-check form-check-inline">-->
+        <!--  <input class="form-check-input" type="radio" name="visibility" id="inlineRadio1" value="public">-->
+        <!--  <label class="form-check-label" for="inlineRadio1">Public</label>-->
+        <!--</div>-->
+        <!--<div class="form-check form-check-inline">-->
+        <!--  <input class="form-check-input" type="radio" name="visibility" id="inlineRadio1" value="private">-->
+        <!--  <label class="form-check-label" for="inlineRadio1">Private</label>-->
+        <!--</div>-->
 
         <div class="form-group">
             <input required type="number" class="form-control" min="2" max="8" placeholder="Max # of People" name="maxsize">
