--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
                     <li class="nav-item"><a class="nav-link" href="/groups">My Groups</a></li>
                 </ul>
                 <ul class="navbar-nav ml-auto mt-2">
-                    <li class="nav-item"><a class="nav-link" href="/settings">Settings</a></li>
+                    <!--<li class="nav-item"><a class="nav-link" href="/settings">Settings</a></li>-->
                     <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                 </ul>
             </div>
