--- a/templates/register.html
+++ b/templates/register.html
@@ -34,39 +34,55 @@
             </button>
         </nav>
 
-        <form action="/register" method="post">
-            <table>
-                <tr>
-                    <th> <label>Subject</label> </th>
-                    <th> <label>Course Number</label> </th>
-                </tr>
+        {% if error == true %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert" id="join-alert">
+          <b>Error:</b> Invalid input.
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {% endif %}
 
-                {% for i in range(5) %}
-                <tr>
-                    <th>
-                        <select onchange="selected({{i}})" class="custom-select my-1 mr-sm-2" id="subject{{i}}" name="subject{{i}}">
-                            <option selected>Subject</option>
+        <div id="register-text">
+            <h1>Register</h1>
 
-                            {% for subject in subjects %}
-                                <option value={{subject}}>{{subject}}</option>
-                            {% endfor %}
+            <p class="lead">
+                Select your current classes below:
+            </p>
+        </div>
 
-                        </select>
-                    </th>
-                    <th>
-                        <select class="custom-select my-1 mr-sm-2" disabled=True id="number{{i}}" name="number{{i}}">
-                            <option selected>Number</option>
-                        </select>
-                    </th>
-                </tr>
-                {% endfor %}
-            </table>
+        <div id="register-form">
+            <form action="/register" method="post">
+                <table>
+                    <tr>
+                        <th> <label>Subject</label> </th>
+                        <th> <label>Course Number</label> </th>
+                    </tr>
 
+                    {% for i in range(5) %}
+                    <tr>
+                        <th>
+                            <select onchange="selected({{i}})" class="custom-select my-1 mr-sm-2" id="subject{{i}}" name="subject{{i}}">
+                                <option selected>Subject</option>
 
+                                {% for subject in subjects %}
+                                    <option value={{subject}}>{{subject}}</option>
+                                {% endfor %}
 
+                            </select>
+                        </th>
+                        <th>
+                            <select class="custom-select my-1 mr-sm-2" disabled=True id="number{{i}}" name="number{{i}}">
+                                <option selected>Number</option>
+                            </select>
+                        </th>
+                    </tr>
+                    {% endfor %}
+                </table>
 
-            <button class="btn btn-primary" type="submit">Register</button>
-        </form>
+                <button class="btn btn-primary" type="submit">Register</button>
+            </form>
+        </div>
 
         <script>
             let courses = JSON.parse('{{ courses | safe }}');
